--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -6,8 +6,37 @@
     <title>Document</title>
 </head>
 <body>
-    {{> blocks/block.hbs text="HELLO HBS"}}
-    {{> blocks/block.hbs text="HELLO WORLD"}}
-    <img src="img/1.png" alt="">
+    <div id="welcome">
+        <h2>page welcome</h2>
+        <input type="text" id="name" placeholder="name">
+        <input type="text" id="login" placeholder="login">
+        <button>sign in</button>
+    </div>
+    <div id="chat">
+        <h2>page chat</h2>
+        <div class="userInfo">
+            <h3>user <button id="logout">logOut</button></h3>
+            <div class="user" id="user">
+                <img src="" class="userFoto" id="userFoto">
+                <div class="userName" id="userName"></div>
+                <div class="userText" id="userLogin"></div>
+            </div>
+            <input type="file" id="fileInput">
+        </div>
+        <div class="chat">
+            <div class="userList">
+                <h3>users list</h3>
+                <input type="text" id="filter" placeholder="find...">
+                <div class="list" id="list"></div>
+            </div>
+            <div class="messages">
+                <h3>chat</h3>
+                <div id="usersNum">users: ...</div>
+                <div id="messages"></div>
+                <input type="text" id="textInput">
+                <button id="send">Send</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
