--- a/src/views/blocks/user.hbs
+++ b/src/views/blocks/user.hbs
@@ -1,5 +1,9 @@
 <div class="user" id={{login}}>
-    <img src={{foto}} class="userFoto" id="userFoto">
-    <div class="userName" id="userName">{{name}}</div>
-    <div class="userText" id="userLogin">{{login}}</div>
+    <table><tr>
+        <td><img src={{foto}} class="userFoto" id="userFoto"></td>
+        <td>
+            <div class="userName" id="userName">{{name}}</div>
+            <div class="userText" id="userLogin">{{login}}</div>
+        </td>
+    </tr></table>
 </div>
