--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,8 @@
 $body-color: #000;
+$left-width: 300px;
+$chat-height: 530px;
+$scroll-height: 400px;
+$input-height: 30px;
 
 body {
     color: $body-color;
@@ -6,51 +10,79 @@ body {
     margin: 0;
     padding: 0;
 }
+.btn {
+    width: 120px;
+}
+// welcome
+.welcome {
+    border: 1px solid;
+    width: 200px;
+}
+.welcome div {
+    padding: 5px;
+    text-align: center;
+}
 // user
-.userInfo{
-    // border: 1px solid;
-    width: 250px;
-    height: 170px;
+.infoUser{
+    border: 1px solid;
+    width: $left-width;
+    height: 250px;
 }
 .user{
     height: 60px;
-    width: 250px;  
+    width: $left-width;  
     padding: 5px;
 }
-.userName {
-    padding-top: 10px;
-    padding-left: 60px;
-}
-.userText {
-    padding-left: 60px;
-}
 .userFoto {
-    position: absolute;
-    margin: 5px;
     height: 50px;
     width: 50px;
     border: 1px solid;
     border-radius: 25px;
 }
-//chat
-// .chat{
-
-// }
+.infoFoto {
+    border: 1px solid;
+    height: 250px;
+    width: $left-width;
+    top: 250px;
+    left: 250px;
+    text-align: center;
+}
+.previewFoto {
+    height: 120px;
+    width: 120px;
+    border: 1px solid;
+    border-radius: 60px;
+}
 // users
 .userList{
-    // border: 0.1px solid;
-    width: 250px;
+    border: 1px solid;
+    width: $left-width;
+    height: $chat-height;
+    
+}
+.filter {
+    height: $input-height;
+}
+.list {
+    border: 1px solid;
+    height: $scroll-height;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 // messages
 .messages{
-    // border: 0.5px solid;
-    width: 500px;
+    border: 1px solid;
+    width: 600px;
+    height: $chat-height;
+}
+.usersNum {
+    height: $input-height;
 }
 #messages {
-    width: 500px;
-    height: 300px;
-    overflow-y: scroll;
     border: 1px solid;
+    width: 600px;
+    height: $scroll-height;
+    overflow-y: scroll;
 }
 .messageFoto {
     margin: 5px;
@@ -62,19 +94,11 @@ body {
 .message {
     height: 60px;
 }
-.me {
-    text-align: left;
+.send {
+    height: $input-height;
+    text-align: right;
+    padding: 5px;
 }
-.my {
-    text-align: right; 
+#textInput {
+    width: 400px;
 }
-
-
-
-
-
-// input[type=file] {
-    
-// }
-
-
