--- a/src/views/blocks/messageMy.hbs
+++ b/src/views/blocks/messageMy.hbs
@@ -1,5 +1,9 @@
-<div class="message my" id={{login}}>
-    {{text}}
-    ({{login}}/{{date}})
-    <img src="{{foto}}" class="messageFoto" id="foto" style="{{fotoStyle}}">
+<div class="message my" id={{login}} align="right">
+    <table><tr>
+        <td>
+            {{text}}
+            ({{login}}/{{date}})
+        </td>
+        <td><img src="{{foto}}" class="messageFoto" id="foto" style="{{fotoStyle}}"></td>
+    </tr></table>
 </div>
